# mapf-het

./: README.md  go.mod
.github/workflows/: elle-tests.yml
api-integration-samples/: README.md  asyncapi.yaml  docker-compose.yml
api-integration-samples/frontend/: Dockerfile  index.html  package.json  vite.config.ts
api-integration-samples/scripts/: seed-data.ps1  setup.ps1
cmd/mapfhet/: main.go
cmd/mapfhetvis/: main.go
docs/: ALGORITHMIC-CONTRIBUTIONS.md  CODE-REVIEW-2026-01-21.md  INTEGRATION-MAP.md  roj-distributed-consensus.tex
ek-kor2/: DEVELOPMENT.md  Dockerfile  IMPLEMENTATION-PLAN.md  Makefile  README.md  build.bat  build.ps1  build.sh  docker-compose.yml
ek-kor2/c/: CMakeLists.txt  README.md  build_arm.bat  build_arm.sh  startup_stm32g474.c  stm32g474.ld  toolchain-aarch64-rpi3.cmake
ek-kor2/c/cmake/: arm-none-eabi.cmake  toolchain-aarch64-rpi3.cmake  toolchain-silabs-efr32.cmake
ek-kor2/c/examples/: basic.c  consensus_demo.c  hax_demo.c  multi_module.c  renode_test.c
ek-kor2/c/include/ekk/: ekk.h  ekk_auth.h  ekk_consensus.h  ekk_db.h  ekk_field.h  ekk_fs.h  ekk_hal.h  ekk_heartbeat.h  ekk_module.h  ekk_spsc.h  ekk_topology.h  ekk_types.h
ek-kor2/c/src/: ekk_auth.c  ekk_consensus.c  ekk_field.c  ekk_fs_client.c  ekk_heartbeat.c  ekk_init.c  ekk_module.c  ekk_spsc.c  ekk_topology.c  ekk_types.c  ekkdb.h  ekkdb_client.c  ekkdb_kv.c  ekkdb_log.c  ekkdb_ts.c  ekkfs.c  ekkfs.h
ek-kor2/c/src/hal/: ekk_hal_posix.c  ekk_hal_stm32g474.c  ekk_hal_x86.c
ek-kor2/c/src/hal/rpi3/: Dockerfile.build  README.md  boot.S  config.txt  dashboard.c  dashboard.h  db_server.c  db_server.h  ekk_hal_rpi3.c  ekkdb_test.c  ekkdb_test.h  ekkfs_test.c  ekkfs_test.h  font8x8.h  framebuffer.c  framebuffer.h  fs_server.c  fs_server.h  gic.c  gic.h  libc_stubs.c  linker.ld  mailbox.c  mailbox.h  main_stub.c  msg_queue.c  msg_queue.h  rpi3_hw.h  sd.c  sd.h  shell.c  shell.h  smp.c  smp.h  timer.c  timer.h  uart.c  uart.h  usb_dwc2.c  usb_dwc2.h  (+2 more)
ek-kor2/c/src/hal/silabs/: efr32mg24.ld  efr32mg24_config.h  efr32mg24_startup.c  ekk_hal_efr32mg24.c
ek-kor2/c/test/: bench_auth.c  bench_spsc.c  test_harness.c  test_main.c
ek-kor2/docs/: ek-kor-rtos-technical-report.md  ek-kor2-booch-review.md  mapf-integration.md  opus-init-research.md  test-vector-system.md
ek-kor2/ekkl/: Cargo.toml
ek-kor2/ekkl/src/: ast.rs  builtins.rs  error.rs  eval.rs  lexer.rs  lib.rs  parser.rs  types.rs  value.rs
ek-kor2/ekkl/tests/: eval_tests.rs  lexer_tests.rs  parser_tests.rs
ek-kor2/gui/: PLAN.md
ek-kor2/renode/: efr32mg24.repl  efr32mg24_ekk.resc  efr32mg24_multi.resc  ekk_multi.resc  ekk_single.resc  hax_demo.resc  hax_multi.resc  run_tests.resc  stm32g474-can.repl  stm32g474-minimal.repl  stm32g474.repl
ek-kor2/rust/: Cargo.toml
ek-kor2/rust/src/: consensus.rs  field.rs  hal.rs  heartbeat.rs  lib.rs  module.rs  topology.rs  types.rs
ek-kor2/scripts/: run_hax_demo.sh
ek-kor2/sim/: multi_module.py
ek-kor2/spec/: api.md  state-machines.md
ek-kor2/spec/property-tests/: Cargo.toml  README.md
ek-kor2/spec/property-tests/src/: lib.rs
ek-kor2/spec/property-tests/tests/: prop_capability.rs  prop_consensus.rs  prop_deadline.rs  prop_field.rs  prop_heartbeat.rs  prop_topology.rs  prop_types.rs
ek-kor2/tools/: README.md  compare_outputs.py  golden_capture.py  golden_validate.py  llm_oracle.py  mksd.py  reference_impl.py  run_tests.py
ek-roj/: Cargo.toml  ELLE-INTEGRATION.md  MAELSTROM-INTEGRATION.md  PLAN-CODE-STRUCTURE.md  TWITTER-THREAD.md
ek-roj/examples/: ocpp_federation_demo.sh
ek-roj/maelstrom-sim-bridge/: README.md  go.mod  main.go
ek-roj/maelstrom-sim-bridge/internal/adapter/: simulator.go
ek-roj/maelstrom-sim-bridge/internal/protocol/: messages.go
ek-roj/maelstrom-sim-bridge/scripts/: run-with-simulator.sh
ek-roj/proto/: messages.json
ek-roj/roj-adapter-ocpp/: Cargo.toml  README.md
ek-roj/roj-adapter-ocpp/src/: adapter.rs  config.rs  lib.rs
ek-roj/roj-adapter-ocpp/src/ocpp/: client.rs  messages.rs  mod.rs  session.rs  types.rs
ek-roj/roj-adapter-ocpp/src/roj/: mod.rs  state_bridge.rs  translator.rs
ek-roj/roj-core-rs/: Cargo.toml
ek-roj/roj-core-rs/src/: consensus.rs  discovery.rs  election.rs  history.rs  lib.rs  log.rs  partition.rs  stigmergy.rs  storage.rs  transport.rs  types.rs
ek-roj/roj-elle-harness/: Cargo.toml
ek-roj/roj-elle-harness/src/: cluster.rs  elle_runner.rs  fault_injection.rs  main.rs  metrics.rs  scenarios.rs  simulator_adapter.rs  workload.rs
ek-roj/roj-maelstrom/: README.md  go.mod
ek-roj/roj-maelstrom/cmd/maelstrom-broadcast/: main.go
ek-roj/roj-maelstrom/cmd/maelstrom-echo/: main.go
ek-roj/roj-maelstrom/internal/consensus/: state.go
ek-roj/roj-maelstrom/scripts/: run-all-tests.sh  run-broadcast.sh  run-echo.sh  test-local.sh
ek-roj/roj-node-c/: CMakeLists.txt
ek-roj/roj-node-c/src/: consensus.c  consensus.h  discovery.c  discovery.h  main.c  transport.c  transport.h  types.h
ek-roj/roj-node-go/: go.mod  main.go
ek-roj/roj-node-go/consensus/: voter.go
ek-roj/roj-node-go/discovery/: mdns.go
ek-roj/roj-node-go/transport/: udp.go
ek-roj/roj-node-rs/: Cargo.toml
ek-roj/roj-node-rs/src/: main.rs
ek-roj/roj-ocpp-node/: Cargo.toml
ek-roj/roj-ocpp-node/src/: main.rs
ek-roj/scripts/: run-elle-tests.bat  run-elle-tests.sh
evidence/: benchmark_results.csv
internal/algo/: astar.go  astar3d.go  cbs.go  deadline_cbs.go  energy_cbs.go  fixes_test.go  hybrid_cbs.go  lognormal.go  mcts.go  mixed_cbs.go  potential_field.go  prioritized.go  solver.go  solver_test.go  stochastic_ecbs.go
internal/bridge/: ekk_adapter.go  field_bridge.go
internal/core/: airspace.go  instance.go  robot.go  solution.go  task.go  types.go  types_test.go  workspace.go
internal/sim/: simulator.go
internal/vis/: app.go
paper/: Makefile  main.aux  main.bbl  main.blg  main.out  main.tex  references.bib
prior-art/: gemini-prior-art.md  opus-prior-art-research.md
testdata/: mapfhet_100_30x30_42.json  mapfhet_10_10x10_42.json  mapfhet_50_22x22_42.json
tools/: README.md  summarize.py  verify_claims.py
(+146 files in other folders)
