[workspace]
resolver = "2"
members = [
    "roj-core-rs",
    "roj-node-rs",
    "roj-adapter-ocpp",
    "roj-ocpp-node",
    "roj-elle-harness",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Elektrokombinacija Team"]
license = "AGPL-3.0"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
parking_lot = "0.12"
rand = "0.8"
tempfile = "3"
