[package]
name = "ekkl"
version = "0.1.0"
edition = "2021"
authors = ["Elektrokombinacija"]
description = "EKKL: EK-KOR Language - Minimal deterministic oracle for EK-KOR2 test vectors"
keywords = ["interpreter", "dsl", "fixed-point", "deterministic"]

[dependencies]
# Parser combinators
nom = "7.1"

# Fixed-point arithmetic (same version as ekk for exact compatibility)
fixed = { version = "=1.24.0", default-features = false }

# Error handling
thiserror = "1.0"

# JSON serialization for test vectors
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
# Property-based testing (same version as ekk)
proptest = "=1.4.0"

[[bin]]
name = "ekkl"
path = "src/bin/ekkl.rs"

[profile.release]
opt-level = 2
