[package]
name = "roj-core"
version = "0.1.0"
edition = "2021"
authors = ["Elektrokombinacija Team"]
description = "ROJ distributed consensus protocol core library"
license = "AGPL-3.0"

[dependencies]
tokio = { version = "1", features = ["full"] }
mdns-sd = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
thiserror = "1"
