[package]
name = "roj-core"
version = "0.1.0"
edition = "2021"
authors = ["Elektrokombinacija Team"]
description = "ROJ distributed consensus protocol core library"
license = "AGPL-3.0"

[features]
default = []
# Enable Elle history recording for consistency testing
elle = ["parking_lot"]

[dependencies]
tokio = { version = "1", features = ["full"] }
mdns-sd = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
thiserror = "1"
rand = "0.8"

# Optional: Fast RwLock for Elle history recording
parking_lot = { version = "0.12", optional = true }

[dev-dependencies]
tempfile = "3"
parking_lot = "0.12"
