[package]
name = "roj-elle-harness"
version = "0.1.0"
edition = "2021"
authors = ["Elektrokombinacija Team"]
description = "Elle consistency testing harness for ROJ consensus"
license = "AGPL-3.0"

[[bin]]
name = "roj-elle"
path = "src/main.rs"

[dependencies]
roj-core = { path = "../roj-core-rs", features = ["elle"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
tempfile = { workspace = true }
parking_lot = { workspace = true }
uuid = { workspace = true }
reqwest = { version = "0.11", features = ["json"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"

[dev-dependencies]
tempfile = { workspace = true }
