[package]
name = "roj-node-rs"
version = "0.1.0"
edition = "2021"
authors = ["Elektrokombinacija Team"]
description = "ROJ distributed consensus node (Rust implementation)"
license = "AGPL-3.0"

[dependencies]
roj-core = { path = "../roj-core-rs" }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json = "1"
